# star-catalog

./: CMakeLists.txt  README.md  demo.html  index.html  parse.js  pom.xml  server.js  starmap.js
public/: index.html  stars.json
src/main/java/: Main.java
tracker/src/: FK6.c  FK6.h  Heap.c  Heap.h  StarMap.c  StarMap.h  StarPlot.c  StarPlot.h  starmap5.c  test.c
